--- a/.github/workflows/cypress-tests-wlm.yml
+++ b/.github/workflows/cypress-tests-wlm.yml
@@ -37,27 +37,6 @@ jobs:
           repository: ${{github.repository}}
           path: cypress-test
 
-      - name: Checkout Security
-        uses: actions/checkout@v4
-        with:
-          repository: opensearch-project/security
-          path: security
-          ref: ${{ env.OS_BRANCH }}
-
-      - name: Build security plugin from security
-        run: |
-          set -e
-          cd security
-          # Remove -Werror from Java compile args wherever it appears
-          grep -R --line-number "\-Werror" || true
-          sed -i 's/-Werror//g' build.gradle || true
-          sed -i 's/-Werror//g' build.gradle.kts || true
-          find . -name "*.gradle.kts" -o -name "*.gradle" -print0 | xargs -0 sed -i 's/-Werror//g'
-          ./gradlew --no-daemon assemble
-          cp build/distributions/opensearch-security-*.zip "$GITHUB_WORKSPACE/security.zip"
-          ls -la build/distributions/
-          ls -lh "$GITHUB_WORKSPACE/security.zip"
-
       - name: Checkout OpenSearch
         uses: actions/checkout@v4
         with:
@@ -85,7 +64,7 @@ jobs:
         uses: derek-ho/start-opensearch@v9
         with:
           opensearch-version: ${{ env.VERSION }}
-          plugins: "file:$GITHUB_WORKSPACE/security.zip,file:$GITHUB_WORKSPACE/wlm.zip"
+          plugins: "file:$GITHUB_WORKSPACE/opensearch-security-3.4.0.0-SNAPSHOT.zip,file:$GITHUB_WORKSPACE/wlm.zip"
           security-enabled: true
           admin-password: ${{ env.OPENSEARCH_INITIAL_ADMIN_PASSWORD }}
           jdk-version: 21
