--- a/.github/workflows/cypress-tests-wlm.yml
+++ b/.github/workflows/cypress-tests-wlm.yml
@@ -45,6 +45,28 @@ jobs:
           repository: ${{github.repository}}
           path: cypress-test
 
+      - name: Checkout security
+        uses: actions/checkout@v4
+        with:
+          path: OpenSearch
+          repository: opensearch-project/security
+          ref: ${{ env.OS_BRANCH }}
+
+      - name: Build security plugin
+        run: |
+          set -e
+          echo "Using security branch: $OS_BRANCH"
+          cd security
+
+          # Build ONLY the security plugin
+          ./gradlew assemble
+
+          echo "Checking security build directory:"
+          ls -la build/distributions/
+
+          cp build/distributions/opensearch-security-*.zip "$GITHUB_WORKSPACE/security.zip"
+          ls -lh "$GITHUB_WORKSPACE/security.zip"
+
       - name: Checkout OpenSearch
         uses: actions/checkout@v4
         with:
@@ -72,7 +94,7 @@ jobs:
         uses: derek-ho/start-opensearch@v9
         with:
           opensearch-version: ${{ env.VERSION }}
-          plugins: "file:$GITHUB_WORKSPACE/opensearch-security-3.4.0.0-SNAPSHOT.zip,file:$GITHUB_WORKSPACE/wlm.zip"
+          plugins: "file:$GITHUB_WORKSPACE/security.zip,file:$GITHUB_WORKSPACE/wlm.zip"
           security-enabled: true
           admin-password: ${{ env.OPENSEARCH_INITIAL_ADMIN_PASSWORD }}
           jdk-version: 21
