--- a/.github/workflows/cypress-tests-wlm.yml
+++ b/.github/workflows/cypress-tests-wlm.yml
@@ -9,7 +9,6 @@ on:
 env:
   OS_BRANCH: "main"
   SECURITY_ENABLED: "true"
-  VERSION: "3.4.0"
   OPENSEARCH_INITIAL_ADMIN_PASSWORD: "myStrongPassword123!"
 jobs:
   tests:
@@ -71,6 +70,14 @@ jobs:
           repository: opensearch-project/OpenSearch
           ref: ${{ env.OS_BRANCH }}
 
+      - name: Get OpenSearch version
+        id: get-version
+        run: |
+          cd OpenSearch
+          VERSION=$(./gradlew properties -q | grep "^version:" | awk '{print $2}' | sed 's/-SNAPSHOT//')
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "Detected OpenSearch version: $VERSION"
+
       - name: Build WLM plugin from OpenSearch
         run: |
           set -e
@@ -78,8 +85,7 @@ jobs:
           cd OpenSearch
 
           # Build ONLY the workload-management plugin
-          ./gradlew :plugins:workload-management:clean :plugins:workload-management:assemble \
-            -Dopensearch.version=${{ env.VERSION }} --no-daemon
+          ./gradlew :plugins:workload-management:clean :plugins:workload-management:assemble --no-daemon
 
           echo "Checking WLM build directory:"
           ls -la plugins/workload-management/build/distributions/
@@ -90,7 +96,7 @@ jobs:
       - name: Run Opensearch with A Single Plugin
         uses: derek-ho/start-opensearch@v9
         with:
-          opensearch-version: ${{ env.VERSION }}
+          opensearch-version: ${{ steps.get-version.outputs.VERSION }}
           plugins: "file:$GITHUB_WORKSPACE/security.zip,file:$GITHUB_WORKSPACE/wlm.zip"
           security-enabled: true
           admin-password: ${{ env.OPENSEARCH_INITIAL_ADMIN_PASSWORD }}
