--- a/.github/workflows/cypress-tests-wlm-no-security.yml
+++ b/.github/workflows/cypress-tests-wlm-no-security.yml
@@ -8,6 +8,7 @@ on:
       - "*"
 env:
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
+  OPENSEARCH_BRANCH: 'main'
   QUERY_INSIGHTS_BRANCH: 'main'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
