--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "object-hash": "^3.0.0",
     "plotly.js-dist": "^2.34.0",
     "luxon": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-vis": "^1.11.7",
     "pbkdf2": "3.1.5",
     "form-data": "4.0.4"
