Update binary installation to use main branch of opensearch-dashboards
Signed-off-by: Emily Guo <35637792+LilyCaroline17@users.noreply.github.com>

--- a/.github/workflows/verify-binary-installation.yml
+++ b/.github/workflows/verify-binary-installation.yml
@@ -50,6 +50,7 @@ jobs:
           plugin_name: query-insights-dashboards
           built_plugin_name: queryInsightsDashboards
           install_zip: true
+          opensearch-dashboards-ref: main
 
       - name: Start the binary
         run: |
