--- a/package.json
+++ b/package.json
@@ -28,23 +28,23 @@
     "postbuild": "echo Renaming build artifact to [$npm_package_config_id-$npm_package_version.zip] && mv build/$npm_package_config_id*.zip build/$npm_package_config_id-$npm_package_version.zip"
   },
   "dependencies": {
-    "echarts": "^6.0.0",
-    "echarts-for-react": "^3.0.2",
     "@babel/helpers": "^7.22.9",
     "@babel/runtime": "^7.26.10",
     "@babel/runtime-corejs3": "^7.22.9",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.2",
     "filesize": "^10.1.6",
-    "object-hash": "^3.0.0",
-    "plotly.js-dist": "^2.34.0",
+    "form-data": "4.0.4",
     "luxon": "^3.2.1",
-    "react-vis": "^1.11.7",
+    "object-hash": "^3.0.0",
     "pbkdf2": "3.1.5",
-    "form-data": "4.0.4"
+    "plotly.js-dist": "^2.34.0",
+    "react-vis": "^1.11.7"
   },
   "resolutions": {
-    "@types/react": "^16.9.8",
+    "@types/react": "^18.2.0",
     "**/@types/jest": "^29.3.1",
-    "**/@types/react-dom": "^16.9.8",
+    "**/@types/react-dom": "^18.2.0",
     "eslint-utils": "^1.4.2",
     "async": "^3.2.3",
     "json5": "^2.2.3",
@@ -74,7 +74,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/luxon": "^3.6.2",
     "@types/object-hash": "^3.0.0",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.2",
     "cypress": "^13.6.0",
     "cypress-real-events": "1.7.6",
